# kuntajohdontyopoyta

./: README.md  pyproject.toml  requirements.txt  statfin_service.py  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
