[project]
name = "aluekehityksen-dashboard"
version = "0.1.0"
description = "Streamlit dashboard Kaustisen seudun avainlukujen visualisointiin"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.38.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "requests>=2.32.0",
]

[tool.streamlit]
entrypoint = "streamlit_app.py"
